2006-09-06  Larry Jones  <lawrence.jones@ugs.com>

	* rcs.c (apply_rcs_changes): Improve linked list handling.  Remove
	unused variables and unreachable error handling code.  Avoid unneeded
	dynamic allocation of temp linevector.  Minor stylistic code clean up.

2006-09-06  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Improve header block comment.  Clean up
	unused linevector on non-fatal error.

2006-09-06  Mark D. Baushke  <mdb@gnu.org>

	* client.h (HAVE_NETDB_H): Explicitly include netdb.h to get
	'struct hostent' even when --disable-password-authenticated-client
	and --without-gssapi are used.
	(CVS_PROXY_PORT): Define outside of AUTH_CLIENT_SUPPORT and
	HAVE_GSSAPI.
	* buffer.h (buf_count_mem): Provide if defined (PROXY_SUPPORT).
	(Problems reported by Jim Salter <jsalterjim@earthlink.net>.)

2006-09-06  Derek Price  <derek@ximbiot.com>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Remove an unecessary memcpy.  Avoid some
	other processing on error.
	(linevector_delete): Remove - it's no longer used.

2006-09-06  Mark D. Baushke  <mdb@gnu.org>

	[bug #17560]
	* rcs.c (apply_rcs_changes): Fix the merge algorithm from O(n^2)
	to O(n).
	(Based on a patch submitted by "Michael J. Smith"
	<msmith@ideorlando.org>)

2006-09-02  Mark D. Baushke  <mdb@gnu.org>

	* cvs.h: Remove unprotected config.h include to avoid SIZE_MAX
	redefinition warning.
	* cvsrc.c, error.c, exithandle.c, expand_path.c, hardlink.c,
	login.c, myndbm.c, scramble.c, stack.c, vers_ts.c, version.c,
	zlib.c: Include <config.h> now that cvs.h is no longer doing it.
	* Makefile.in: Regenerated.

2006-08-29  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rmadd-20): Execute in proxy mode so the sticky tag still
	changes for the rest of the tests.

2006-08-28  Derek Price  <derek@ximbiot.com>

	* recurse.c (do_recursion): Remove misguided assertion.
	* sanity.sh (dottedroot-3): Add test for the above.
	(Thanks to report from Paul Eggert <eggert@CS.UCLA.EDU>.)
